--- a/testCSM/templates/Products.html
+++ b/testCSM/templates/Products.html
@@ -34,6 +34,10 @@
                 </li>
                 
                 <li class="nav-item">
+                    <a class="nav-link h1 " href="/Orders">Orders</a>
+                </li>
+                
+                <li class="nav-item">
                     <a class="nav-link h1 " href="/jsonDisplay">jsonDisplay</a>
                 </li>
                 
@@ -47,11 +51,17 @@
     <thead class="tableFixHead bg-body">
         <tr>
             
-            <th scope="col"><input type="text" class="form-control" placeholder="Filter" onchange="filtr(this.value, 'rowid');">rowid</th>
+            
+            <th scope="col"><input type="text" class="form-control" placeholder="Filter" onchange="filtr(this.value, 'rowid');">Client</th>
+            
+            
             
             <th scope="col">Price</th>
             
+            
+            
             <th scope="col">Product name</th>
+            
             
             <th scope="col" style="width:10%;">
                 
