--- a/testCSM/templates/Clients.html
+++ b/testCSM/templates/Clients.html
@@ -34,6 +34,10 @@
                 </li>
                 
                 <li class="nav-item">
+                    <a class="nav-link h1 " href="/Orders">Orders</a>
+                </li>
+                
+                <li class="nav-item">
                     <a class="nav-link h1 " href="/jsonDisplay">jsonDisplay</a>
                 </li>
                 
@@ -47,13 +51,21 @@
     <thead class="tableFixHead bg-body">
         <tr>
             
+            
             <th scope="col"><input type="text" class="form-control" placeholder="Filter" onchange="filtr(this.value, 'Name');">Name</th>
+            
+            
             
             <th scope="col"><input type="text" class="form-control" placeholder="Filter" onchange="filtr(this.value, 'Surname');">Surname</th>
             
+            
+            
             <th scope="col">Age</th>
             
+            
+            
             <th scope="col">uid</th>
+            
             
             <th scope="col" style="width:10%;">
                 
