--- a/testCSM/templates/jsonDisplay.html
+++ b/testCSM/templates/jsonDisplay.html
@@ -31,6 +31,10 @@
                 </li>
                 
                 <li class="nav-item">
+                    <a class="nav-link h1 " href="/Orders">Orders</a>
+                </li>
+                
+                <li class="nav-item">
                     <a class="nav-link h1 active" href="/jsonDisplay">jsonDisplay</a>
                 </li>
                 
