--- a/testCSM/templates/order.html
+++ b/testCSM/templates/order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Client</title>
+        <title>order</title>
         <meta charset="utf-8" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -44,17 +44,34 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    <form action="/new/Client/submit" method="post">
+                    <form action="/new/order/submit" method="post">
                         <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
-                        <b>Create a new Client element</b>
+                        <b>Create a new order element</b>
 <div class="mb-3" style="margin-left:1%">
     
         
         
     <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-        <label for="Name" class="form-label">Name</label>
+        <label for="name" class="form-label">name</label>
         <div class="input-group">
-            <input type="text" class="form-control" name="Name" id="Name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  required>
+            <input type="text" class="form-control" name="name" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+            
+        </div>
+    </div>
+        
+        
+    
+        
+        <br>
+        <b>Create a new Products element</b>
+<div class="mb-3" style="margin-left:1%">
+    
+        
+        
+    <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+        <label for="name" class="form-label">name</label>
+        <div class="input-group">
+            <input type="text" class="form-control" name="name" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
             
         </div>
     </div>
@@ -64,9 +81,9 @@
         
         
     <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-        <label for="Surname" class="form-label">Surname</label>
+        <label for="count" class="form-label">count</label>
         <div class="input-group">
-            <input type="text" class="form-control" name="Surname" id="Surname" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+            <input type="text" class="form-control" name="count" id="count" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
             
         </div>
     </div>
@@ -75,28 +92,9 @@
     
         
         
-    <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-        <label for="Age" class="form-label">Age</label>
-        <div class="input-group">
-            <input type="text" class="form-control" name="Age" id="Age" aria-describedby="addonyrs"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
-            
-            <span class="input-group-text" id="addonyrs">yrs</span>
-            
-        </div>
-    </div>
-        
         
     
-        
-        
-    <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-        <label for="uid" class="form-label">uid</label>
-        <div class="input-group">
-            <input type="text" class="form-control" name="uid" id="uid" aria-describedby="addon"  {% if data is defined %}  value="{{data[3]}}" {%endif%}  >
-            
-        </div>
-    </div>
-        
+</div>
         
     
 </div>
