--- a/testCSM/templates/superSecret.html
+++ b/testCSM/templates/superSecret.html
@@ -31,6 +31,10 @@
                 </li>
                 
                 <li class="nav-item">
+                    <a class="nav-link h1" href="/Orders">Orders</a>
+                </li>
+                
+                <li class="nav-item">
                     <a class="nav-link h1" href="/jsonDisplay">jsonDisplay</a>
                 </li>
                 
@@ -42,17 +46,22 @@
                 <div class="card-body">
                     <form action="/new/superSecret/submit" method="post">
                         <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
-                        <div class="mb-3 ">
-                            
-                            <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-                                <label for="Secret" class="form-label">Secret</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="Secret" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
-                                    
-                                </div>
-                            </div>
-                            
-                        </div>
+                        <b>Create a new superSecret element</b>
+<div class="mb-3" style="margin-left:1%">
+    
+        
+        
+    <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+        <label for="Secret" class="form-label">Secret</label>
+        <div class="input-group">
+            <input type="text" class="form-control" name="Secret" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+            
+        </div>
+    </div>
+        
+        
+    
+</div>
                         <button type="submit" class="btn btn-primary">Add</button>
                         <a href="/" class="btn btn-danger">Cancel</a>
                     </form>
