Preprared frontend for nested datatypes

--- a/templates/dataTemplate.html
+++ b/templates/dataTemplate.html
@@ -27,7 +27,7 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    {{renderTable(data)}}
+                    {{renderTable(data, True)}}
                 </div>
               </div>
         </main>
