--- a/testCSM/templates/superSecret.html
+++ b/testCSM/templates/superSecret.html
@@ -47,19 +47,22 @@
                     <form action="/new/superSecret/submit" method="post">
                         <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
                         <b>Create a new superSecret element</b>
-<div class="mb-3" style="margin-left:1%">
-    
+<div class="mb-3" name="inputSet" style="margin-left:1%">
+    <div class="row" name="superSecretrow0">
         
         
-    <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
-        <label for="Secret" class="form-label">Secret</label>
-        <div class="input-group">
-            <input type="text" class="form-control" name="Secret" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
-            
+        
+        <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+            <label for="Secret" class="form-label">Secret</label>
+            <div class="input-group">
+                <input type="text" class="form-control" name="Secret0" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+                
+            </div>
         </div>
+        
+        
+        
     </div>
-        
-        
     
 </div>
                         <button type="submit" class="btn btn-primary">Add</button>
@@ -72,4 +75,22 @@
             
         </footer>
     </body>
+    <script>
+        function newRow(el, dataName){
+            var inputSet = el.parentElement;
+            nextRowId = el.getAttribute("nextRow");
+            el.setAttribute("nextRow", nextRowId + 1);
+            row0 = document.getElementsByName(dataName + "row0")[0];
+            rowN = row0.cloneNode(true);
+            rowN.setAttribute("name", nextRowId)
+            for(child of rowN.children){
+                console.log(child)
+                if(child.classList.contains("mb-3")){
+                    input = child.children[1].children[0];
+                    input.name = input.name.replace(/.$/, nextRowId);
+                }
+            }
+            inputSet.insertBefore(rowN, el);
+        }
+    </script>
 </html>
