--- a/testCSM/templates/Clients.html
+++ b/testCSM/templates/Clients.html
@@ -47,7 +47,7 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    <table class="table table-hover h-100">
+                    <table class="table table-hover">
     <thead class="tableFixHead bg-body">
         <tr>
             
@@ -67,11 +67,13 @@
             <th scope="col">uid</th>
             
             
+            
             <th scope="col" style="width:10%;">
                 
                 <a href="/new/Client" class="btn btn-success" style="width:100%;">New Client</a>
                 
             </th>
+            
         </tr>
     </thead>
     <tbody>
@@ -94,6 +96,7 @@
                     <td name="uid">{{item[4]}}</td>
                     
                 
+                
                 <td><a href="/edit/Client/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
                     
                         
@@ -101,6 +104,7 @@
                         
                     
                 </td>
+                
             </tr>
         {%endfor%}
     </tbody>
