--- a/testCSM/templates/Products.html
+++ b/testCSM/templates/Products.html
@@ -47,7 +47,7 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    <table class="table table-hover h-100">
+                    <table class="table table-hover">
     <thead class="tableFixHead bg-body">
         <tr>
             
@@ -63,9 +63,11 @@
             <th scope="col">Product name</th>
             
             
+            
             <th scope="col" style="width:10%;">
                 
             </th>
+            
         </tr>
     </thead>
     <tbody>
@@ -84,9 +86,11 @@
                     <td name="Product name">{{item[3]}}</td>
                     
                 
+                
                 <td><a href="/edit/Product/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
                     
                 </td>
+                
             </tr>
         {%endfor%}
     </tbody>
