--- a/testCSM/templates/secretPage.html
+++ b/testCSM/templates/secretPage.html
@@ -47,7 +47,7 @@
         <main>
             <div class="card">
                 <div class="card-body">
-                    <table class="table table-hover h-100">
+                    <table class="table table-hover">
     <thead class="tableFixHead bg-body">
         <tr>
             
@@ -55,11 +55,13 @@
             <th scope="col">Secret</th>
             
             
+            
             <th scope="col" style="width:10%;">
                 
                 <a href="/new/superSecret" class="btn btn-success" style="width:100%;">New superSecret</a>
                 
             </th>
+            
         </tr>
     </thead>
     <tbody>
@@ -70,9 +72,11 @@
                     <td name="Secret">{{item[1]}}</td>
                     
                 
+                
                 <td><a href="/edit/superSecret/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
                     
                 </td>
+                
             </tr>
         {%endfor%}
     </tbody>
