--- a/testCSM/templates/superSecret.html
+++ b/testCSM/templates/superSecret.html
@@ -45,10 +45,10 @@
             <div class="card">
                 <div class="card-body">
                     <form action="/new/superSecret/submit" method="post">
-                        <input type="hidden" style="display:none;" name="rowid" value="{{rowid}}">
                         <b>Create a new superSecret element</b>
-<div class="mb-3" name="inputSet" style="margin-left:1%">
+<div name="inputSet" style="margin-left:1%; padding-bottom:5px">
     <div class="row" name="superSecretrow0">
+        <input type="hidden" style="display:none;" name="superSecretrowid0" value="{{superSecretrowid0}}">
         
         
         
@@ -89,6 +89,7 @@
                     input.name = input.name.replace(/.$/, nextRowId);
                 }
             }
+            rowN.children[0].name = rowN.children[0].name.replace(/.$/, nextRowId);
             inputSet.insertBefore(rowN, el);
         }
     </script>
